2011-07-05  Ivan Maidanski <ivmai@mail.ru>

	* misc.c (GC_init): Use HOTTER_THAN (instead of STACK_GROWS_DOWN)
	for GC_stackbottom assertion.
	* os_dep.c (GC_enclosing_mapping): Define only if IA64 or
	INCLUDE_LINUX_THREAD_DESCR; make GC_INNER.
	* pthread_support.c (GC_enclosing_mapping): Declare (only if
	INCLUDE_LINUX_THREAD_DESCR).
	* os_dep.c (GC_get_main_stack_base): Don't call pthread_getattr_np
	if REDIRECT_MALLOC as the former is observed to call redirected
	malloc (while GC is not initialized yet) on some Linux platforms.
	* include/private/gc_priv.h (MAX_HEAP_SECTS): Don't use a smaller
	value for SMALL_CONFIG if USE_PROC_FOR_LIBRARIES defined.

2011-07-05  Ivan Maidanski <ivmai@mail.ru>

	* malloc.c (GC_init_lib_bounds): Call GC_init (to ensure GC is
	initialized before doing GC_text_mapping).
	* misc.c (GC_init): Add a check for GC_init recursion in case of
	malloc is redirected (abort with the corresponding message).
	* pthread.c (GC_thr_init): Place GC_add_roots_inner call into
	"else" branch to prevent "local variable might be uninitialized"
	compiler warning; add comment.

2011-07-05  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (GC_register_dynamic_libraries): Remove duplicate
	call of GC_FirstDLOpenedLinkMap (twice).
	* dyn_load.c (GC_register_main_static_data): Add comment.
	* cord/cordbscs.c (CORD_riter): Check for empty string passed (do
	not call CORD_riter4 if CORD_len() returned zero).
	* cord/cordbscs.c (CORD_init_min_len): Replace the K&R-style
	function definition with the ANSI C one.
	* cord/cordbscs.c: Expand all tabs to spaces; remove
	trailing spaces at EOLn.
	* tests/threadkey_test.c (on_thread_exit_inner): Check
	GC_pthread_create() result.

2011-07-04  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gcconfig.h (etext): Don't define if unused
	(NetBSD).
	* include/private/gcconfig.h (GC_data_start, DATASTART): Define
	for NetBSD/amd64 if ELF.
	* include/private/gcconfig.h (SEARCH_FOR_DATA_START): Don't define