@@ -1,3 +1,11 @@
+2011-07-14  Ivan Maidanski <ivmai@mail.ru>
+
+	* new_hblk.c (GC_build_fl): Adjust "h" local variable cast type
+	when setting obj_link (to prevent compiler warning); reformat the
+	comment.
+	* tests/test.c (reverse_test_inner): Use proper type when touching
+	"b" and "c" local variables (to prevent compiler warning).
+
 2011-07-05  Ivan Maidanski <ivmai@mail.ru>
 
 	* misc.c (GC_init): Use HOTTER_THAN (instead of STACK_GROWS_DOWN)
